@@ -3,6 +3,8 @@
 - umockdev-run: Fix running of child program to keep stdin.
 - preload: Fix resolution of "/dev" and "/sys"
 - ioctl_tree: Fix endless loop when the first encountered ioctl was unknown
+- preload: Support opening a /dev node multiple times for ioctl emulation
+  (issue #3)
 
 0.1 (2013-02-12)
 ----------------
